--- a/index.html
+++ b/index.html
@@ -6,15 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">        
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Dashboard</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <!-- intestazione -->
+        <header class="border">
+
+        </header>
+
+        <!-- contenuto -->
+        <main class="border">
+            <!-- side-bar -->
+            <div class="side-bar">
+
+            </div>
+            <!-- barra superiore-->
+            <div class="main-content">
+                <div class="container-fluid bg-primary">
+                    <div class="row">
+                        <div class="col">1</div>
+                        <div class="col">2</div>
+                        <div class="col">3</div>
+                    </div>
+                    <div class="dashboard row bg-body">
+                        <div class="col-12 col-lg-8">
+                            sinistra
+                        </div>
+                        <div class="col-12 col-lg-4">
+                            destra
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 
 </body>
 
