--- a/index.html
+++ b/index.html
@@ -22,9 +22,27 @@
         </header>
 
         <!-- contenuto -->
-        <main class="border">
+        <main>
             <!-- side-bar -->
             <div class="side-bar">
+                <div class="menu">
+                    <div class="mb-2">
+                        <i class="fa-solid fa-house"></i>
+                        <span>Home</span>
+                    </div>
+                    <div class="mb-2">
+                        <i class="fa-solid fa-chart-simple"></i>
+                        <span>Stats</span>
+                    </div>
+                    <div class="mb-2">
+                        <i class="fa-solid fa-signal"></i>
+                        <span>Signals</span>
+                    </div>
+                </div>
+                <div class="settings">
+                    <i class="fa-solid fa-gear"></i>
+                    <span>Settings</span>
+                </div>
 
             </div>
             <!-- barra superiore-->
