--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                 </div>
                 <div class="settings">
                     <i class="fa-solid fa-gear"></i>
-                    <span>Settings</span>
+                    <span>Admin</span>
                 </div>
-
             </div>
             <!-- barra superiore-->
             <div class="main-content">
@@ -53,9 +52,84 @@
                         <div class="col">2</div>
                         <div class="col">3</div>
                     </div>
+            <!-- contenuto interno -->
                     <div class="dashboard row bg-body">
                         <div class="col-12 col-lg-8">
-                            sinistra
+                            <div class="card mt-4">
+                                <div class="card-header">
+                                    <h2>Prossime classi</h2>
+                                    <table class="table table-hover">
+                                        <thead>
+                                          <tr>
+                                            <th scope="col">Nome</th>
+                                            <th scope="col">Data Inizio</th>
+                                            <th scope="col">ROI</th>
+                                            <th scope="col">Stato</th>
+                                            <th scope="col">Azioni</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 75</th>
+                                            <td>15 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-success">Done</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 76</th>
+                                            <td>16 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-success">Done</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 77</th>
+                                            <td>17 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-warning text-light">process</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 78</th>
+                                            <td>18 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-success">Done</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 79</th>
+                                            <td>19 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-danger">failed</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 80</th>
+                                            <td>20 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-success">Done</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 81</th>
+                                            <td>21 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-danger">failed</span></td>
+                                            <td></td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 82</th>
+                                            <td>22 Febbraio 2021</td>
+                                            <td>20%</td>
+                                            <td><span class="badge text-bg-success">Done</span></td>
+                                            <td></td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                </div>
+                            </div>
+                        
                         </div>
                         <div class="col-12 col-lg-4">
                             destra
