--- a/index.html
+++ b/index.html
@@ -2,144 +2,154 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Bootstrap Dashboard</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Bootstrap Dashboard</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <!-- intestazione -->
-        <header class="border">
+  <div class="wrapper">
+    <!-- intestazione -->
+    <header class="border">
 
-        </header>
+    </header>
 
-        <!-- contenuto -->
-        <main>
-            <!-- side-bar -->
-            <div class="side-bar">
-                <div class="menu">
-                    <div class="mb-2">
-                        <i class="fa-solid fa-house"></i>
-                        <span>Home</span>
-                    </div>
-                    <div class="mb-2">
-                        <i class="fa-solid fa-chart-simple"></i>
-                        <span>Stats</span>
-                    </div>
-                    <div class="mb-2">
-                        <i class="fa-solid fa-signal"></i>
-                        <span>Signals</span>
-                    </div>
+    <!-- contenuto -->
+    <main>
+      <!-- side-bar -->
+      <div class="side-bar">
+        <div class="menu">
+          <div class="mb-2">
+            <i class="fa-solid fa-house"></i>
+            <span>Home</span>
+          </div>
+          <div class="mb-2">
+            <i class="fa-solid fa-chart-simple"></i>
+            <span>Stats</span>
+          </div>
+          <div class="mb-2">
+            <i class="fa-solid fa-signal"></i>
+            <span>Signals</span>
+          </div>
+        </div>
+        <div class="settings">
+          <i class="fa-solid fa-gear"></i>
+          <span>Admin</span>
+        </div>
+      </div>
+      <!-- barra superiore-->
+      <div class="main-content">
+        <div class="container-fluid bg-primary">
+          <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+          </div>
+          <!-- contenuto interno -->
+          <div class="dashboard row bg-body">
+            <div class="col-12 col-lg-8">
+              <div class="card mt-4">
+                <div class="card-header">
+                  <h2>Prossime classi</h2>
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Data Inizio</th>
+                        <th scope="col">ROI</th>
+                        <th scope="col">Stato</th>
+                        <th scope="col">Azioni</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 75</th>
+                        <td>15 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                            type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 76</th>
+                        <td>16 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 77</th>
+                        <td>17 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-warning text-light">process</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 78</th>
+                        <td>18 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 79</th>
+                        <td>19 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-danger">failed</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 80</th>
+                        <td>20 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 81</th>
+                        <td>21 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-danger">failed</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 82</th>
+                        <td>22 Febbraio 2021</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
+                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
-                <div class="settings">
-                    <i class="fa-solid fa-gear"></i>
-                    <span>Admin</span>
-                </div>
+
+              </div>
             </div>
-            <!-- barra superiore-->
-            <div class="main-content">
-                <div class="container-fluid bg-primary">
-                    <div class="row">
-                        <div class="col">1</div>
-                        <div class="col">2</div>
-                        <div class="col">3</div>
-                    </div>
-            <!-- contenuto interno -->
-                    <div class="dashboard row bg-body">
-                        <div class="col-12 col-lg-8">
-                            <div class="card mt-4">
-                                <div class="card-header">
-                                    <h2>Prossime classi</h2>
-                                    <table class="table table-hover">
-                                        <thead>
-                                          <tr>
-                                            <th scope="col">Nome</th>
-                                            <th scope="col">Data Inizio</th>
-                                            <th scope="col">ROI</th>
-                                            <th scope="col">Stato</th>
-                                            <th scope="col">Azioni</th>
-                                          </tr>
-                                        </thead>
-                                        <tbody>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 75</th>
-                                            <td>15 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-success">Done</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 76</th>
-                                            <td>16 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-success">Done</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 77</th>
-                                            <td>17 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-warning text-light">process</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 78</th>
-                                            <td>18 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-success">Done</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 79</th>
-                                            <td>19 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-danger">failed</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 80</th>
-                                            <td>20 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-success">Done</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 81</th>
-                                            <td>21 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-danger">failed</span></td>
-                                            <td></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 82</th>
-                                            <td>22 Febbraio 2021</td>
-                                            <td>20%</td>
-                                            <td><span class="badge text-bg-success">Done</span></td>
-                                            <td></td>
-                                          </tr>
-                                        </tbody>
-                                      </table>
-                                </div>
-                            </div>
-                        
-                        </div>
-                        <div class="col-12 col-lg-4">
-                            destra
-                        </div>
-                    </div>
-                </div>
+            <div class="col-12 col-lg-4">
+              destra
             </div>
-        </main>
-    </div>
-
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
