Added Section FAQ

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col">3</div>
           </div>
           <!-- contenuto interno -->
-          <div class="dashboard row bg-body">
+          <div class=" row bg-body">
             <div class="col-12 col-lg-8">
               <div class="card mt-4">
                 <div class="card-header">
@@ -74,69 +74,113 @@
                         <td>15 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                            type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 76</th>
                         <td>16 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 77</th>
                         <td>17 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-warning text-light">process</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 78</th>
                         <td>18 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 79</th>
                         <td>19 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-danger">failed</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 80</th>
                         <td>20 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 81</th>
                         <td>21 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-danger">failed</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                       <tr>
                         <th scope="row"><img class="image" src="img/class-avatar.jpg" alt="Avatar"> Classe 82</th>
                         <td>22 Febbraio 2021</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i class="fa-solid fa-pen"></i></button><button
-                          type="button" class="btn btn-light"><i class="fa-solid fa-trash"></i></button></td>
+                        <td><button type="button" class="btn btn-light me-1"><i
+                              class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
+                              class="fa-solid fa-trash"></i></button></td>
                       </tr>
                     </tbody>
                   </table>
                 </div>
-
+              </div>
+              <div class="card mt-4">
+                <div class="card-header">
+                  <h2>F.A.Q.</h2>
+                  <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          Come aggiungere un nuovo studente?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                          Come posso accedere alle informazioni del mio account?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          Posso usare questa dashboard da mobile?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-12 col-lg-4">
