--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <header class="border">
 
     </header>
+    <!-- fine intestazione -->
 
     <!-- contenuto -->
     <main>
@@ -44,6 +45,8 @@
           <span>Admin</span>
         </div>
       </div>
+      <!-- fine side-bar -->
+
       <!-- barra superiore-->
       <div class="main-content">
         <div class="container-fluid bg-primary">
@@ -52,6 +55,8 @@
             <div class="col">2</div>
             <div class="col">3</div>
           </div>
+          <!-- fine barra superiore -->
+
           <!-- contenuto interno -->
           <div class=" row bg-body">
             <div class="col-12 col-lg-8">
@@ -202,14 +207,14 @@
               <div class="card mt-4 ">
                 <div class="card-header">
                   <h2>Todo</h2>
-                  <div class="form-check border bg-body pt-1 pb-1">
+                  <div class="form-check border bg-body pt-1 pb-1 ps-4">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
                       Kickoff nuove classi
                     </label>
                   </div>
                   <div class="form-check border bg-body pt-1 pb-1">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
                     <label class="form-check-label" for="flexCheckChecked">
                       Lezione su Bootstrap 5 in classe #75
                     </label>
@@ -222,12 +227,26 @@
                   </div>
                 </div>
               </div>
-
+              <div class="card mt-4" style="width: 27rem;">
+                <img src="img/stats.jpeg" class="card-img-top" alt="Stats">
+                <div class="card-body">
+                  <h5 class="card-title">Utenti attivi</h5>
+                  <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese.</p>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Gennaio: 1200</li>
+                    <li class="list-group-item">Febbraio: 800</li>
+                    <li class="list-group-item">Marzo: 1500</li>
+                    <li class="list-group-item"><a href="#">Visualizza report approfondito</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- fine contenuto interno -->
     </main>
+    <!-- fine contenuto -->
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
