--- a/index.html
+++ b/index.html
@@ -17,8 +17,44 @@
 <body>
   <div class="wrapper">
     <!-- intestazione -->
-    <header class="border">
-
+    <header class="border pt-2">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <img src="img/logo.svg" alt="Logo">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ps-4">
+              <li class="nav-item">
+                <i class="fa-solid fa-bars"></i>
+              </li>
+              <li class="nav-item ps-4">
+                <i class="fa-solid fa-question"></i>
+              </li>
+              <li class="nav-item ps-4">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </li>
+              <li class="nav-item dropdown ps-4">
+                <i class="fa-solid fa-bell"></i>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
     <!-- fine intestazione -->
 
