--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
       <div class="main-content">
         <div class="container-fluid bg-primary text-white">
           <div class="row flex-lg-row-reverse">
-            <div class="col-12 col-lg-4 pt-2 ps-5">
+            <div class="col-12 col-lg-4 pt-2 pb-2">
               <p>Nuovo Studente</p>
               <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
                 aria-controls="staticBackdrop">
                 <span><i class="fa-solid fa-plus icon border"></i></span>
               </button>
-              <div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
+              <div class="offcanvas offcanvas-end " data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
                 aria-labelledby="staticBackdropLabel">
                 <div class="offcanvas-header">
                   <h5>Inserisci un nuovo studente</h5>
@@ -124,7 +124,7 @@
                     <div class="col-md-6">
                       <input type="text" class="form-control" name="Città" value="Città" required>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-4">
                       <select name="Stato" required>
                         <option value="Stato">Italia</option>
                         <option value="Stato">Francia</option>
@@ -150,20 +150,20 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-4 pt-2 ps-5 ">
+            <div class="col-12 col-lg-4 pt-2 pb-2">
               <p>Studenti online negli ultimi 30 minuti</p>
-              <span class="fs-2">125</span>
+              <span class="fs-3">125</span>
             </div>
-            <div class="col-12 col-lg-4 pt-2">
+            <div class="col-12 col-lg-4 pt-2 pb-2">
               <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <h3>Boolean <span class="badge text my-bg fs-6">Piano blaze</span></h3>
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item text-white fs-6"><span class="badge text my-bg">3 app</span></li>
-                  <li class="breadcrumb-item text-white fs-6" aria-current="page"><span class="badge text my-bg">Boolean
+                  <li class=" breadcrumb-item text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg">Boolean
                       mobile app</span></li>
-                  <li class="breadcrumb-item text-white fs-6" aria-current="page"><span class="badge text my-bg">Boolean
+                  <li class=" text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg">Boolean
                       web app</span></li>
-                  <li class="breadcrumb-item text-white fs-6" aria-current="page"><span class="badge text my-bg">Boolean
+                  <li class=" text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg">Boolean
                       blog app</span></li>
                 </ol>
               </nav>
@@ -321,19 +321,19 @@
               <div class="card mt-4 ">
                 <div class="card-header">
                   <h2>Todo</h2>
-                  <div class="form-check border bg-body pt-1 pb-1 ps-4">
+                  <div class="form-check border-bottom bg-body pt-1 pb-1 ps-5">
                     <input class="form-check-input" type="checkbox" value="check">
                     <label class="form-check-label" for="flexCheckDefault">
                       Kickoff nuove classi
                     </label>
                   </div>
-                  <div class="form-check border bg-body pt-1 pb-1">
+                  <div class="form-check border-bottom bg-body pt-1 ps-5 ">
                     <input class="form-check-input" type="checkbox" value="check">
                     <label class="form-check-label" for="flexCheckChecked">
                       Lezione su Bootstrap 5 in classe #75
                     </label>
                   </div>
-                  <div class="form-check border bg-body pt-1 pb-1 ">
+                  <div class="form-check border-bottom bg-body pt-1 ps-5">
                     <input class="form-check-input" type="checkbox" value="check">
                     <label class="form-check-label" for="flexCheckDefault">
                       Controllare username github nuovi studenti
